--- a/index01.html
+++ b/index01.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TeamProject01</title>
+    <link rel="stylesheet" href="./index.01.css">
+
 </head>
 
 <body>
@@ -12,6 +14,7 @@
     test1
     teeeeeeest
     <div class="test"></div>
+    <h1>Hello!</h1>
     <script src="./index01.js"></script>
 </body>
 
